# rust-rest-api

./: Cargo.toml  Dockerfile.dbmate  Dockerfile.dev  Dockerfile.raw  Makefile  Rocket.toml  create_db.sh  docker-compose.yml
data/: movies.json
db/migrations/: 20210924021405_insert_movie_data_into_movies_table.sql
src/: bin.rs
src/db/: mod.rs
src/model/: mod.rs
