[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rust-rest-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
serde = { version= "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

